--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "-y",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node -- build/server.js"
